--- a/tut23_24/views/profile.ejs
+++ b/tut23_24/views/profile.ejs
@@ -5,12 +5,18 @@
     <title>profile</title>
 </head>
 <body>
+    <%-include('common/header')%>
     <h1>Welocme! <%=user.name%></h1>
     <h1>This is your profile page</h1>
     <h3>Email:<%=user.email%></h3>
     <h3>City:<%=user.city%></h3>
     <ul>
         <% user.skill.forEach((item)=>{ %>
+            <li> <%= item%></li>
+        <% })%>
+        <br>
+        <i>age of the Employees</i>
+        <% user.age.forEach((item)=>{ %>
             <li> <%= item%></li>
         <% })%>
     </ul>
